--- a/src/bandpowers/Makefile
+++ b/src/bandpowers/Makefile
@@ -17,7 +17,7 @@ TARGET = xi2bandpow
 all: $(TARGET)
 
 $(TARGET): $(TARGET).c
-      $(CC) $(CFLAGS) -o $(TARGET) $(TARGET).c
+	$(CC) $(CFLAGS) $(INCLUDES) -o $(TARGET) $(TARGET).c
 
 clean:
-      $(RM) $(TARGET)
+	$(RM) $(TARGET)
