--- a/Calc_2pt_Stats/progs.ini
+++ b/Calc_2pt_Stats/progs.ini
@@ -16,209 +16,35 @@ export LANG=C
 # how many processors do we have
 NPARA=1
 
-# used directories
-#PIPESOFT=/home/erben/software/theli-1.18.0/
-PIPESOFT=/home/cech/software/theli-1.30.0/   # update to ldac so it carries through TCOMM keywords
-BIN=${PIPESOFT}/bin/Linux_64/
-CONF=${PIPESOFT}/conf/reduction; export CONF
-STANDARDSTARSCAT=/aibn202_2/thomas/USNO-A2/
-PHOTSTANDARDSTARSCAT=/aibn85_b/terben/software/cvswork/Stetson_std.cat
-SCRIPTS=${PIPESOFT}/scripts
-UTILSCRIPTS=${PIPESOFT}/scripts/Linux_64/
-SMMACROS=${PIPESOFT}/scripts/sm_macros
 #
 # TEMPDIR setup for THELI catalogue processing at ROE
+# If we running on a worker we don't want to be writing
+# lots of to /home as it cloggs up the I/O so use /data
 #
 HOST=`hostname`
 HOST=${HOST:0:4}
 
 if [ "${HOST}" = "cuil" ] || [ "${HOST}" = "stor" ]; then
-  TEMPDIR=/home/${USER}/TEMPDIR
+  TMPDIR=/home/${USER}/TMPDIR
 else
   if [ "${HOST}" = "work" ]; then
-     TEMPDIR=/data/${USER}/TEMPDIR
-  else
-    echo "You can only use this version of progs.ini for THELI"
-    echo "catalogue processing on cuillin in Edinburgh!"
-    exit 1;
-  fi      
+     TMPDIR=/data/${USER}/TMPDIR
+else  # maybe you're not in Edinburgh :)
+  TMPDIR=/home/${USER}/TMPDIR
 fi
 
-export TEMPDIR
+export TMPDIR
 
-#
-# Software necessary for PSF check plots at ROE
-#
-P_ATHENA=/home/cech/KiDSLenS/software/athena_1.7/bin/athena
-# configuration directory for science applications:
-SCIENCECONF=/home/cech/KiDSLenS/THELI_catalogues/source/ldacpipeline-1.9.11/conf/science
-export SCIENCECONF
+# where does your python live:
+P_PYTHON2=/usr/local/anaconda/2/bin/python
+P_PYTHON=/usr/local/anaconda/3.6/bin/python
 
-# define here AS MANY Iraf directories
-# as processors (NPARA)
-IRAFDIR[1]=/aibn85_b/terben/iraf
-IRAFDIR[2]=
-
-# for compatibility I need the following
-DATACONF=${CONF}; export DATACONF
-
-#
-# define here the location of script interpreters:
-P_PERL=/usr/local/bin/perl
-P_PYTHON=/usr/local/anaconda/2/bin/python
-P_PYTHON3=/usr/local/anaconda/3.6/bin/python
-
-#
-# here are the used programs listed
-
-#
-# LDAC programs
-#
-P_ANALYSELDAC=${BIN}/analyseldac
-P_ANISOTROPY=${BIN}/anisotropy
-P_ASCTOLDAC=${BIN}/asctoldac_theli
-P_PREANISOTROPY=${BIN}/preanisotropy
-P_LDACADDKEY=${BIN}/ldacaddkey_theli
-P_LDACADDMASK=${BIN}/ldacaddmask_theli
-P_LDACCALC=${BIN}/ldaccalc_theli
-P_LDACCONV=${BIN}/ldacconv_theli
-P_LDACDELKEY=${BIN}/ldacdelkey_theli
-P_LDACDESC=${BIN}/ldacdesc_theli
-P_LDACPASTE=${BIN}/ldacpaste_theli
-P_LDACRENKEY=${BIN}/ldacrenkey_theli
-P_LDACADDTAB=${BIN}/ldacaddtab_theli
-P_LDACDELTAB=${BIN}/ldacdeltab_theli
-P_LDACRENTAB=${BIN}/ldacrentab_theli
-P_LDACFILTER=${BIN}/ldacfilter_theli
-P_LDACTESTEXIST=${BIN}/ldactestexist_theli
-P_LDACTOASC=${BIN}/ldactoasc_theli
-P_LDACTOSKYCAT=${BIN}/ldactoskycat_theli
-P_LDACJOINKEY=${BIN}/ldacjoinkey_theli
-P_LDACSPLIT=${BIN}/ldacsplit_theli
-P_LDACSTATS=${BIN}/ldacstats_theli
-P_PREASTROM=${BIN}/preastrom
-P_ASTROM=${BIN}/astrom
-P_ASSOCIATE=${BIN}/associate
-P_MAKESSC=${BIN}/make_ssc
-P_MAKEJOIN=${BIN}/make_join
-P_APLASTROM=${BIN}/aplastrom
-P_MAKEDISTORT=${BIN}/make_distort
-P_APLPHOTOM=${BIN}/aplphotom
-P_RELPHOTOM=${BIN}/relphotom
-P_ADDIMAGECALIBS=${BIN}/add_image_calibs
-P_FITSSPLIT=${BIN}/fitssplit
-P_FITSPASTE=${BIN}/fitspaste
-P_ASTROMETRIXCONVERT=${BIN}/astrometrix_convert
-P_SELECTOVERLAPS=${BIN}/select_overlaps
-P_IMAGEHEADER=${BIN}/imageheader
-P_IC=${BIN}/ic
-P_MAKESUBIMAGE=${BIN}/makesubimage
-P_ALBUM=${BIN}/album
-P_STATS=${BIN}/stats
-P_TRANSFORMIMAGE=${BIN}/transformimage
-P_IMSTATS=${BIN}/imstats
-P_DECIMALTOHMS=${BIN}/decimaltohms
-P_DECIMALTODMS=${BIN}/decimaltodms
-P_DMSTODECIMAL=${BIN}/dmstodecimal
-P_HMSTODECIMAL=${BIN}/hmstodecimal
-P_IMCOMBFLAT_IMCAT=${BIN}/imcombflat
-#
-# Terapix programs
-#
-P_SEX=${BIN}/sex_theli
-P_WW=${BIN}/ww_theli
-P_SWARP=${BIN}/swarp_theli
-#
-#
-# FLIPS programs
-#
-P_IMRED=${BIN}/imred
-P_IMMODE=${BIN}/immode
-P_IMCOMBFLAT=${BIN}/imcombflat_flips
-#
-# programs from the eclipse package
-#
-P_DFITS=${BIN}/dfits_theli
-P_FITSORT=${BIN}/fitsort_theli
-P_HIERARCH=${BIN}/hierarch28
-P_REPLACEKEY=${BIN}/replacekey
-P_IOFITS=${BIN}/iofits
-#
-# own programs developed with 
-# eclipse and qfits
-#
-P_IMRED_ECL=${BIN}/preprocess
-P_FITSSPLIT_ECL=${BIN}/mefsplit
-P_FIXCR_ECL=${BIN}/fixcr
-P_SWARPFILTER=${BIN}/swarpfilter
-P_FITSCOLLAPSE=${BIN}/fitscollapse
-#
-# For THELI modified versions of the ASTROMETRIX and
-# PHOTOMETRIX scripts:
-#
-S_ASTROMETRIX=/home/cech/KiDSLenS/THELI_catalogues/source/ldacpipeline-1.9.11/scripts/astrometrix/astrom_theli
-S_PHOTOMETRIX=/home/cech/KiDSLenS/THELI_catalogues/source/ldacpipeline-1.9.11/scripts/astrometrix/photom_theli
-#
-# GNU parallel
-#
-S_PARALLEL=${SCRIPTS}/parallel/parallel.pl
-#
-# other utility programs
-#
-P_READLINK=${BIN}/readlink
-P_AIRMASS=${BIN}/airmass
-P_LST=${BIN}/lst
-P_NIGHTID=${BIN}/nightid
-P_CALDATE=${BIN}/caldate
-P_FITSLIMITS=${BIN}/fitslimits
-#
-# here are the used scripts listed
-#
-S_LISTEXT=${UTILSCRIPTS}/list_ext.sh
-S_LISTEXT_PARA=${UTILSCRIPTS}/list_ext_para.sh
-S_LISTMODE=${UTILSCRIPTS}/list_mode.sh
-S_LISTMODE_PARA=${UTILSCRIPTS}/list_mode_para.sh
-S_LISTMODE_SIGMA=${UTILSCRIPTS}/list_mode_sigma.sh
-S_LISTMODE_SIGMA_PARA=${UTILSCRIPTS}/list_mode_sigma_para.sh
-S_LIO=${UTILSCRIPTS}/lio.sh
-S_SCAMPCAT=${UTILSCRIPTS}/scampcat.py
-S_PHOTOABS=${UTILSCRIPTS}/photo_abs.py
-S_APLASTROMSCAMP=${UTILSCRIPTS}/aplastrom_scamp.py
-S_SUPERFLATEXCLUSION=${UTILSCRIPTS}/superflatexclusion.py
-#
-# Programs and scripts not included in the pipeline distribution
-#
-P_ACLIENT=
-P_CL=/scisoft/bin/cl
-P_FIND=/usr/bin/find
-P_GAWK=/usr/bin/gawk
-P_SCAMP=
-P_SM=
-P_SORT=/usr/bin/sort
-
-#
-# Scripts, programs and configuration directories
-# used for science analysis:
-
-#
-# Narcisso Benitez photometric redshift code BPZ:
-BPZPATH=${PIPESOFT}/scripts/BPZ
-export BPZPATH
-
-S_BPZ=${BPZPATH}/bpz.py
-
-#
-# Peter Capaks program to calibrate magnitude offsets:
-P_CALIBPHOTOZDATA=${BIN}/calib_photoz_data
-
-#
-# Schlegels dust_getval program to obtain R(B-V) values
-P_DUSTGET=
-# The directory with the Schlegel dust maps:
-DUSTMAPS=
-
-#modify head
-P_MODHEAD=/home/cech/KiDSLenS/bin/modhead
+# where is the c-code executables that we use?
+# assuming here that you're keeping the repo directory structure
+SRCDIR=/home/$USER/KiDSLenS/Cat_to_Obs_K1000_P1/
+P_XI2BANDPOW=../src/bandpowers/xi2bandpow
+# add a path to bjutils library for this code to work
+export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:../bjutils/lib/
 
 # restore verbose and xtrace bash flags if necessary:
 if  [ ${USE_X} -eq 1 ]; then
