--- a/Calc_2pt_Stats/progs.ini
+++ b/Calc_2pt_Stats/progs.ini
@@ -13,10 +13,6 @@ fi
 export LANG=C
 
 #
-# how many processors do we have
-NPARA=1
-
-#
 # TEMPDIR setup for THELI catalogue processing at ROE
 # If we running on a worker we don't want to be writing
 # lots of to /home as it cloggs up the I/O so use /data
@@ -26,8 +22,7 @@ HOST=${HOST:0:4}
 
 if [ "${HOST}" = "cuil" ] || [ "${HOST}" = "stor" ]; then
   TMPDIR=/home/${USER}/TMPDIR
-else
-  if [ "${HOST}" = "work" ]; then
+elif [ "${HOST}" = "work" ]; then
      TMPDIR=/data/${USER}/TMPDIR
 else  # maybe you're not in Edinburgh :)
   TMPDIR=/home/${USER}/TMPDIR
@@ -36,16 +31,18 @@ fi
 export TMPDIR
 
 # where does your python live:
-P_PYTHON2=/usr/local/anaconda/2/bin/python
-P_PYTHON=/usr/local/anaconda/3.6/bin/python
+P_PYTHON=/usr/local/anaconda/2/bin/python
+P_PYTHON3=/usr/local/anaconda/3.6/bin/python
 
 # where is the c-code executables that we use?
 # assuming here that you're keeping the repo directory structure
-SRCDIR=/home/$USER/KiDSLenS/Cat_to_Obs_K1000_P1/
-P_XI2BANDPOW=../src/bandpowers/xi2bandpow
-# add a path to bjutils library for this code to work
-export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:../bjutils/lib/
+SRCDIR=/home/$USER/KiDSLenS/Cat_to_Obs_K1000_P1/src/
+P_XI2BANDPOW=$SRCDIR/bandpowers/xi2bandpow
 
+# add a path to bjutils library for this code to work
+export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:$SRCDIR/bjutils/lib/
+#
+#
 # restore verbose and xtrace bash flags if necessary:
 if  [ ${USE_X} -eq 1 ]; then
   set -xv
