removed some files and moved npair files to a new folder

--- a/data/covariance/COSEBIs_covariance.ini
+++ b/data/covariance/COSEBIs_covariance.ini
@@ -149,7 +149,7 @@ Cov_name = %(OUTPUT_FOLDER)s/Covariance_blind%(blind)s_nMaximum_%(nmax_cosebis)s
 ; the output covariances have this as their starting name, but different suffixes at the end. Use the one with _NoiseJustForNoise.
 calculateCov = 1 ; calculate covariance if not 0
 OnlyBmodes_Cov = 0 ; (optional, default=0) If set to 1 then only calculated the B-mode covariance
-input_nPair_files_suffix = %(INPUT_DATA)s/xipm/XI_V1_4000
+input_nPair_files_suffix = %(INPUT_DATA)s/xipm/XI_K1000_ALL_BLIND_'%(blind)s'_V1.0.0A_ugriZYJHKs_photoz_SG_mask_LF_svn_309c_2Dbins_v2_goldclasses_Flag_SOM_Fid_nbins_4000_theta_0.5_300.0
 input_nPair_files_suffix_end = .ascii 
 Athena_input = 0 ; 0 assumes the input is not athena no correction for the noise contribution. Set to 1 for Athena
 nPairs_column = 11 ; For athena it is 8, for treecorr use 11, although that is not weighted
